// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::AggregationBranch snapshots renders with all checked 1`] = `
Array [
  <li
    className="aggregation-branch foo parent m-form-field m-form-field--checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={true}
      className="flex-fixed a-checkbox"
      id="issue-foo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label"
      htmlFor="issue-foo"
    >
      <span
        className="u-visually-hidden"
      >
        foo
      </span>
    </label>
    <button
      className="flex-all a-btn a-btn--link"
      onClick={[Function]}
    >
      <span>
        foo
      </span>
      <svg>
        up.svg
      </svg>
    </button>
    <span
      className="flex-fixed parent-count"
    >
      99
    </span>
  </li>,
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issue-foo-bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        90
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issue-foo-baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        5
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issue-foo-qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        4
      </span>
    </li>
  </ul>,
]
`;

exports[`component::AggregationBranch snapshots renders with indeterminate 1`] = `
Array [
  <li
    className="aggregation-branch foo parent m-form-field m-form-field--checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={false}
      className="flex-fixed a-checkbox"
      id="issue-foo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label indeterminate"
      htmlFor="issue-foo"
    >
      <span
        className="u-visually-hidden"
      >
        foo
      </span>
    </label>
    <button
      className="flex-all a-btn a-btn--link"
      onClick={[Function]}
    >
      <span>
        foo
      </span>
      <svg>
        up.svg
      </svg>
    </button>
    <span
      className="flex-fixed parent-count"
    >
      99
    </span>
  </li>,
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issue-foo-bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        90
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issue-foo-baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        5
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field--checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issue-foo-qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issue-foo-qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        4
      </span>
    </li>
  </ul>,
]
`;

exports[`component::AggregationBranch snapshots renders with none checked 1`] = `
<li
  className="aggregation-branch foo parent m-form-field m-form-field--checkbox body-copy"
>
  <input
    aria-label="foo"
    checked={false}
    className="flex-fixed a-checkbox"
    id="issue-foo"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="toggle a-label"
    htmlFor="issue-foo"
  >
    <span
      className="u-visually-hidden"
    >
      foo
    </span>
  </label>
  <button
    className="flex-all a-btn a-btn--link"
    onClick={[Function]}
  >
    <span>
      foo
    </span>
    <svg>
      down.svg
    </svg>
  </button>
  <span
    className="flex-fixed parent-count"
  >
    99
  </span>
</li>
`;
